--- a/wp-content/themes/miradas/scss/blocks/_contacto.scss
+++ b/wp-content/themes/miradas/scss/blocks/_contacto.scss
@@ -16,6 +16,7 @@
 
     p {
       margin: 10px 0 30px 0;
+      font-size: 18px;
     }
 
     h1,h2,h3,h4,h5,h6 {
@@ -39,6 +40,10 @@
       margin-bottom: 30px;
       color: $primary-color;
       font-family: $third-font;
+    }
+
+    &__titulo {
+      font-size: 28px;
     }
   }
 
