--- a/wp-content/themes/miradas/scss/blocks/_image_with_text.scss
+++ b/wp-content/themes/miradas/scss/blocks/_image_with_text.scss
@@ -46,6 +46,15 @@
         @include responsive ('tablet-h') {
             width: 100%;
         }
+
+        p {
+            line-height: 1.8;
+            font-size: 18px;
+
+            @include responsive ('mobile-h') {
+                font-size: 16px;
+            }
+        }
     }
 
     &__title {
