--- a/wp-content/themes/miradas/scss/blocks/_popup_equipo.scss
+++ b/wp-content/themes/miradas/scss/blocks/_popup_equipo.scss
@@ -68,7 +68,7 @@
         &__text {
             font-size: 22px;
             color: #707070;
-            width: 762px;
+            width: 100%;
             margin: 32px 0 45px 0;
             line-height: 32px;
 
