--- a/wp-content/themes/miradas/style.css
+++ b/wp-content/themes/miradas/style.css
@@ -2988,7 +2988,7 @@ https://flickity.metafizzy.co
 .popup_equipo__cont__text {
   font-size: 22px;
   color: #707070;
-  width: 762px;
+  width: 100%;
   margin: 32px 0 45px 0;
   line-height: 32px;
 }
