--- a/wp-content/themes/miradas/scss/blocks/_layout_instagram.scss
+++ b/wp-content/themes/miradas/scss/blocks/_layout_instagram.scss
@@ -1,6 +1,6 @@
 .layout_instagram {
   width: 100%;
-  padding: 81px 0 92px 0;
+  padding: 0 0 100px 0;
   
   &__title {
     text-align: center;
@@ -8,7 +8,7 @@
     text-align: center;
 
     a {
-      text-transform: lowercase;
+      text-transform: inherit;
     }
   }
 
