--- a/wp-content/themes/miradas/scss/blocks/_logos.scss
+++ b/wp-content/themes/miradas/scss/blocks/_logos.scss
@@ -10,6 +10,7 @@
         font-weight: 300;
         font-size: 20px;
         line-height: 1.8;
+        text-align: center;
 
         @include responsive ('mobile-h') {
             font-size: 16px;
