--- a/wp-content/themes/miradas/scss/blocks/_nuestro_equipo.scss
+++ b/wp-content/themes/miradas/scss/blocks/_nuestro_equipo.scss
@@ -40,6 +40,7 @@
       width: 100%;
       object-fit: cover;
       max-width: 250px;
+      aspect-ratio: 1;
 
       @include responsive ('mobile-h') {
         width: 250px;
