--- a/wp-content/themes/miradas/scss/blocks/_que_ofrecemos.scss
+++ b/wp-content/themes/miradas/scss/blocks/_que_ofrecemos.scss
@@ -10,6 +10,10 @@
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 40px;
 
+    @include responsive ('desktop-m') {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
     @include responsive ('desktop-s') {
       grid-template-columns: repeat(1, 1fr);
     }
@@ -26,8 +30,12 @@
       width: 100%;
       overflow: hidden;
       border-radius: 3px;
-      box-shadow: 0 1px 1px rbga(0,0,0,0.50);
+      box-shadow: 2px 2px 5px rgba(0,0,0,0.50);
       cursor: pointer;
+
+      @include responsive ('desktop-s') {
+        box-shadow: none;
+      }
 
       img {
         width: 100%;
@@ -116,10 +124,16 @@
 
     @include responsive ('desktop') {
       margin-top: 20px;
+      font-size: 20px;
     }
 
     @include responsive ('mobile-h') {
-      font-size: 16px;
+      font-size: 18px;
     }
   }
+}
+
+.que_ofrecemos + .nuestro_equipo,
+.nuestro_equipo + .logos {
+  padding-top: 0;
 }
