--- a/wp-content/themes/miradas/scss/main.scss
+++ b/wp-content/themes/miradas/scss/main.scss
@@ -26,7 +26,8 @@ Text Domain: twentysixteen
   'components/_posts',
   'components/_flickity',
   'components/_animations',
-  'components/_breadcrumb';
+  'components/_breadcrumb',
+  'components/_page-404'; 
 
 // Hero
 @import
