--- a/wp-content/themes/miradas/scss/base/_base.scss
+++ b/wp-content/themes/miradas/scss/base/_base.scss
@@ -395,6 +395,23 @@ strong * {
 
 }
 
+.btn-whatsapp {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  background: #25d366;
+  text-align: center;
+  display: inline-block;
+  line-height: 50px;
+  color: #fff;
+  font-size: 30px;
+  box-shadow: #333 0 0 10px;
+  z-index: 1000;
+}
+
 .instagram {
   @include padding-section();
 
