--- a/wp-content/themes/miradas/scss/blocks/_nuestro_equipo.scss
+++ b/wp-content/themes/miradas/scss/blocks/_nuestro_equipo.scss
@@ -106,6 +106,7 @@
       overflow: hidden;
       min-height: 310px;
       cursor: default;
+      max-width: 310px;
 
       @include responsive ('tablet-h') {
         aspect-ratio: inherit;
