--- a/wp-content/themes/miradas/scss/footer/_base.scss
+++ b/wp-content/themes/miradas/scss/footer/_base.scss
@@ -67,6 +67,7 @@
     .copyright {
       color: $grey-light;
       line-height: 1.13;
+      font-size: 14px;
     }
 
     .bottom_links {
@@ -82,6 +83,10 @@
           margin: 0;
         }
       }
+    }
+
+    .site-footer__bq {
+      font-size: 14px;
     }
   }
 }
