--- a/wp-content/themes/miradas/scss/header/_base.scss
+++ b/wp-content/themes/miradas/scss/header/_base.scss
@@ -65,6 +65,8 @@
       justify-content: flex-end;
 
       .buttom_suscribe {
+        display: none;
+
         @include responsive ('tablet-h') {
           margin: 0 auto;
           display: block;
