--- a/wp-content/themes/miradas/scss/abstracts/_mixins_theme.scss
+++ b/wp-content/themes/miradas/scss/abstracts/_mixins_theme.scss
@@ -129,6 +129,10 @@
 			list-style: circle;
       margin-bottom: 15px;
       font-size: 20px;
+
+      @include responsive('mobile-h') {
+        font-size: 16px;
+      }
 		}
 	}
 	a {
