--- a/wp-content/themes/miradas/scss/blocks/_video.scss
+++ b/wp-content/themes/miradas/scss/blocks/_video.scss
@@ -14,7 +14,10 @@
       width: 100%;
       padding-top: 50%;
     }
-  
+
+    @include responsive('mobile-v') {
+      aspect-ratio: 1;
+    }
   }
 
     video {
