--- a/wp-content/themes/miradas/scss/components/_menu.scss
+++ b/wp-content/themes/miradas/scss/components/_menu.scss
@@ -19,13 +19,19 @@
       padding: 14px 0;
     }
 
+    @include responsive('mobile-h') {
+      padding: 5px 0;
+    }
+
     &--text {
       font-size: 22px;
       line-height: 0.9;
       color: $primary-color;
       font-weight: 400;
 
-
+      @include responsive ('mobile-h') {
+        font-size: 18px;
+      }
     }
   }
 
