--- a/wp-content/themes/miradas/scss/header/_base.scss
+++ b/wp-content/themes/miradas/scss/header/_base.scss
@@ -69,7 +69,7 @@
 
         @include responsive ('tablet-h') {
           margin: 0 auto;
-          display: block;
+          display: none; //block cuando se quiera que aparezca.
           width: fit-content;
           margin-top: 40px;
         }
