--- a/wp-content/themes/miradas/scss/blocks/_contacto.scss
+++ b/wp-content/themes/miradas/scss/blocks/_contacto.scss
@@ -22,6 +22,12 @@
     h1,h2,h3,h4,h5,h6 {
       margin-bottom: 0; 
     }
+
+    iframe {
+      @include responsive ('tablet-h') {
+        width: 100%;
+      }
+    }
   }
 
   .date {
