--- a/wp-content/themes/miradas/scss/blocks/_popup_equipo.scss
+++ b/wp-content/themes/miradas/scss/blocks/_popup_equipo.scss
@@ -26,6 +26,7 @@
 
     .container {
         width: 100%;
+        padding: 0 30px;
     }
 
     @include responsive('tablet-h') {
@@ -50,7 +51,7 @@
     &__cont {
         width: 100%;
         display: block;
-        padding: 100px 0;
+        padding: 30px 0;
         z-index: 10;
         position: relative;
 
@@ -62,25 +63,25 @@
         }
 
         &__text {
-            font-size: 22px;
+            font-size: 18px;
             color: #707070;
             width: 100%;
-            margin: 32px 0 45px 0;
-            line-height: 32px;
+            margin: 15px 0;
+            line-height: 1.6;
 
             @include responsive('mobile-h') {
                 width: 100%;
-                font-size: 18px;
             }
 
             @include responsive('mobile-v') {
-                margin: 30  px 0 20px 0;
+                margin: 10px 0 10px 0;
+                font-size: 15px;
             }
         }
 
         img {
             border-radius: 50%;
-            max-width: 250px;
+            max-width: 200px;
         }
 
         &__especializacion p {
@@ -114,6 +115,8 @@
     @include responsive('mobile-v') {
         top: 16px;
         right: 16px;
+        width: 30px;
+        height: 30px;
     }
 
     &::before {
@@ -125,6 +128,11 @@
         position: absolute;
         top: 0px;
         right: 0px;
+
+        @include responsive('mobile-v') {
+            width: 30px;
+            height: 30px;
+        }
     } 
     &:hover {
         background-color: $pink;
