--- a/wp-content/themes/miradas/style.css
+++ b/wp-content/themes/miradas/style.css
@@ -3026,6 +3026,7 @@ https://flickity.metafizzy.co
 }
 .popup_equipo .container {
   width: 100%;
+  padding: 0 30px;
 }
 @media only screen and (max-width: 1050px) {
   .popup_equipo.js-loaded {
@@ -3049,7 +3050,7 @@ https://flickity.metafizzy.co
 .popup_equipo__cont {
   width: 100%;
   display: block;
-  padding: 100px 0;
+  padding: 30px 0;
   z-index: 10;
   position: relative;
 }
@@ -3071,26 +3072,26 @@ https://flickity.metafizzy.co
   }
 }
 .popup_equipo__cont__text {
-  font-size: 22px;
+  font-size: 18px;
   color: #707070;
   width: 100%;
-  margin: 32px 0 45px 0;
-  line-height: 32px;
+  margin: 15px 0;
+  line-height: 1.6;
 }
 @media only screen and (max-width: 750px) {
   .popup_equipo__cont__text {
     width: 100%;
-    font-size: 18px;
   }
 }
 @media only screen and (max-width: 600px) {
   .popup_equipo__cont__text {
-    margin: 30 px 0 20px 0;
+    margin: 10px 0 10px 0;
+    font-size: 15px;
   }
 }
 .popup_equipo__cont img {
   border-radius: 50%;
-  max-width: 250px;
+  max-width: 200px;
 }
 .popup_equipo__cont__especializacion p {
   font-weight: 400;
@@ -3126,6 +3127,8 @@ https://flickity.metafizzy.co
   .close_popup {
     top: 16px;
     right: 16px;
+    width: 30px;
+    height: 30px;
   }
 }
 .close_popup::before {
@@ -3136,6 +3139,12 @@ https://flickity.metafizzy.co
   position: absolute;
   top: 0px;
   right: 0px;
+}
+@media only screen and (max-width: 600px) {
+  .close_popup::before {
+    width: 30px;
+    height: 30px;
+  }
 }
 .close_popup:hover {
   background-color: #FBD9D0;
