--- a/wp-content/themes/miradas/scss/blocks/_popup_equipo.scss
+++ b/wp-content/themes/miradas/scss/blocks/_popup_equipo.scss
@@ -82,6 +82,10 @@
         img {
             border-radius: 50%;
             max-width: 200px;
+
+            @include responsive('mobile-v') {
+                max-width: 175px;
+            }
         }
 
         &__especializacion p {
