--- a/wp-content/themes/miradas/style.css
+++ b/wp-content/themes/miradas/style.css
@@ -2891,12 +2891,12 @@ https://flickity.metafizzy.co
 }
 @media only screen and (max-width: 1280px) {
   .stay_informed__text-cont .upper_title {
-    padding-left: 50px;
+    padding-left: 0;
   }
 }
 @media only screen and (max-width: 1050px) {
   .stay_informed__text-cont .upper_title {
-    padding-left: 0;
+    display: none;
   }
 }
 .stay_informed__text-cont .upper_title::before {
@@ -2916,6 +2916,11 @@ https://flickity.metafizzy.co
 @media only screen and (max-width: 1050px) {
   .stay_informed__title {
     margin-bottom: 15px;
+  }
+}
+@media only screen and (max-width: 750px) {
+  .stay_informed__title {
+    font-size: 30px;
   }
 }
 .stay_informed__text {
